<resources>
    <string name="app_name">Flutter - Movie Ratings</string>
    <string name="app_name_short">Flutter</string>
    <string name="accessibility_access_info_content">Enable accessibility in the settings screen for <b>%1$s</b> to show movie ratings in <b>%2$s</b></string>
    <string name="accessibility_settings_button_content">Open Accessibility Settings</string>
    <string name="draw_access_info_content"><b>%1$s</b> needs permission to draw over other apps to show movie ratings when you\'re browsing <b>%2$s</b></string>
    <string name="draw_settings_button_content">Open Permissions Settings</string>
	<string name="accessibility_draw_permission_launch_error">Unable to open device settings page. Please enable the permission manually. We apologize for the inconvenience.</string>
	<string name="accessibility_settings_launch_error">Unable to open accessibility settings page. Please enable the permission manually. We apologize for the inconvenience.</string>
    <string name="powered_by_api">Search results provided by OMDb</string>
    <string name="activate_app_cta">Activate Flutter</string>
    <string name="search_page_title">Flutter</string>
	<string name="search_page_query_hint">Search for movies and tv shows</string>
	<string name="search_page_api_error_content">Unable to search</string>
	<string name="search_page_add_to_collection_title">Search to add to collection</string>
	<string name="search_page_add_to_collection_cta">Add to collection</string>
	<string name="search_page_try_again_cta">Retry</string>
	<string name="search_page_empty_result">No titles found</string>
    <string name="accessibility_info_app_name"><b>Flutter</b></string>
    <string name="accessibility_info_target_name"><b>Netflix, Amazon Prime Video and other supported apps</b></string>
    <string name="accessibility_info_page_header">Activate Flutter</string>
    <string name="accessibility_description">Turn ON the accessibility for Flutter to get movie ratings while you\'re browsing. It helps Flutter to get the name of the movie from the app.\n\nOnce you turn on the button, Android will show you a dialog which will give you info about what Flutter will get access to.\n\nFlutter also offers Text to Speech support to help people with disabilities by speaking out loud the rating of the movie.\n\nFlutter will retrieve window content and process it to find the movie title in the supported apps and show you the rating of the movie.\n\nIf you want to turn Flutter off for a particular app, click on <b>SETTINGS</b> in the app on top and you can enable/disable Flutter for particular apps.
    </string>
    <string name="accessibility_summary">Flutter requires accessibility permission to retrieve name of the movie to show you the ratings.</string>
    <string name="accessibility_label">Flutter Movie Ratings</string>
    <string name="settings_header">Settings</string>
    <string name="settings_info">Enable Flutter for following apps</string>
    <string name="settings_netflix">Netflix</string>
	<string name="settings_primevideo">Amazon Prime Video</string>
	<string name="settings_playmovies">Google Play Movies &amp; TV</string>
	<string name="settings_hotstar">Hotstar</string>
	<string name="settings_bbc_iplayer">BBC iPlayer</string>
	<string name="settings_jio_tv">Jio TV</string>
	<string name="settings_jio_cinema">Jio Cinema</string>
	<string name="settings_redbox">Redbox</string>
	<string name="settings_disney">Disney+</string>
    <string name="settings_preference_update_content">Your preferences have been updated</string>
	<string name="settings_not_installed_apps">Flutter also supports %1s - which are not installed on your device.</string>
    <string name="settings_toast_duration_info">Set the duration for movie ratings to be displayed on your screen (in seconds)</string>
	<string name="settings_privacy_info">Set your privacy preferences</string>
	<string name="settings_export_import_data_info">Flutter allows you to save your data offline. You may also import data (collections, likes) from a file.</string>
	<string name="settings_export_data">Export</string>
	<string name="settings_import_data">Import</string>
	<string name="settings_browse_history">Save recently browsed</string>
	<string name="settings_clear_history">Clear history</string>
	<string name="settings_delete_data_info">Delete all your data including likes, collections and history</string>
	<string name="settings_delete_data">Delete</string>
	<string name="settings_clear_history_dialog_title">Clear browsing history</string>
	<string name="settings_clear_history_dialog_content">Do you want to clear your recently browsed history? The app can not retrieve data once it is deleted.</string>
	<string name="settings_clear_history_dialog_cta">Yes, clear history</string>
	<string name="settings_history_cleared">Your browsing history is cleared.</string>
	<string name="settings_clear_history_error">Unable to clear your browsing history.</string>
	<string name="settings_delete_data_dialog_title">Delete all your data</string>
	<string name="settings_delete_data_dialog_content">Do you want to delete all your data including your collections, titles you liked and browsed recently? Once deleted the app can not retrieve the data.</string>
	<string name="settings_delete_data_dialog_cta">Yes, delete everything</string>
	<string name="settings_data_deleted">Your collections, favorites, recent history has been deleted.</string>
	<string name="settings_data_delete_error">Unable to delete your data.</string>
	<string name="settings_tts_info">Flutter provides a functionality to listen to movie ratings using in-built Text to Speech feature.</string>
	<string name="settings_tts_button_text">Enable Text to Speech</string>
	<string name="settings_install_tts_dialog_title">Install Text to Speech</string>
	<string name="settings_install_tts_dialog_content">Flutter supports only US and UK English for Text to Speech as of now. To enable Text to Speech, please download Text to Speech using your device settigns.</string>
	<string name="settings_install_tts_dialog_cta">Install</string>
	<string name="settings_install_tts_dialog_later">Not now</string>
	<string name="settings_misc">Miscellaneous configurations</string>
	<string name="settings_activate_flutter">Show \'Activate Flutter\'</string>
	<string name="settings_ratings_api_title">Configure ratings strategy</string>
	<string name="settings_use_year_info">Flutter can try to obtain the \'release\' year of the movie to get more accurate ratings.\n\nNote: A lot of TV shows on Netflix do not have correct release year.</string>
	<string name="settings_use_year">Use \'release\' year</string>
	<string name="settings_notification_title">Configure notifications</string>
	<string name="settings_support_notification_info">Flutter may occasionally send push notifications to ask you to support the app. You may select which notifications you want to receive.</string>
	<string name="settings_support_inapp_purchase">Support flutter via in-app purchases</string>
	<string name="settings_support_rate_app">Rate app on Playstore</string>
	<string name="settings_api_fallback_info">Flutter uses OMDb to get movie ratings, search results, etc. To get accurate ratings for translated titles, we have created our private movie ratings API. It\'s still in beta. If you are facing any problems about getting movie ratings, you may switch back to using OMDb API.</string>
	<string name="settings_api_fallback">Use Flutter\'s private APIs</string>
	<string name="settings_api_order_info">In case there are multiple movies with the same title (and release year is not available), flutter shows you the ratings of the popular title (by votes). A lot of shows on Netflix are new so you can choose to see the ratings based on recency.</string>
	<string name="settings_api_order_recent">Show recent titles</string>
	<string name="settings_anime_info">Flutter can use My Anime List (MAL) database to get ratings of Animes if it\'s not found on IMDb.</string>
	<string name="settings_anime">Use MAL database</string>
	<string name="settings_install_tts_unsupported">It seems that Text to Speech is not supported by the device.</string>
	<string name="settings_export_data_dialog_title">Export your data</string>
	<string name="settings_export_data_dialog_content">Flutter lets you export your data in json format. You may share it with your friends, send yourself a copy for back-up or just keep it on your device.</string>
	<string name="settings_export_data_dialog_include_browsing_history">Include browsing history</string>
	<string name="settings_export_data_dialog_positive_cta">Export</string>
	<string name="settings_export_data_error">Unable to export your data.</string>
	<string name="settings_export_data_ready_dialog_title">Data exported</string>
	<string name="settings_export_data_ready_dialog_content">Your data has been successfully exported.\n\nYou may share the file with your friends or send yourself a copy via email.</string>
	<string name="settings_export_data_ready_dialog_positive_cta">Share</string>
	<string name="settings_import_data_dialog_title">Import from a file</string>
	<string name="settings_import_data_dialog_content">Please select a flutter data format supported file and the app will import the data.</string>
	<string name="settings_import_data_dialog_positive_cta">Import</string>
	<string name="settings_import_data_success">Flutter has successfully imported data</string>
	<string name="settings_app_section_title">Manage supported apps</string>
	<string name="settings_app_section_subtitle">Manage preferences for apps &amp; rating display duration</string>
	<string name="settings_data_and_privacy_section_title">Manage your data</string>
	<string name="settings_data_and_privacy_section_subtitle">Set your privacy preferences and import/export data</string>
	<string name="settings_tts_section_title">Configure Text to Speech</string>
	<string name="settings_tts_section_subtitle">Take advantage of Flutter\'s TTS support</string>
	<string name="settings_misc_section_title">Miscellaneous settings</string>
	<string name="settings_misc_section_subtitle">Configure settings (include year in searches, etc)</string>
	<string name="settings_rating_section_title">Customize rating bubble</string>
	<string name="settings_rating_section_subtitle">Change color, duration and position of the bubble</string>
	<string name="settings_battery_optimization_section_title">Battery optimization</string>
	<string name="settings_battery_optimization_section_subtitle">Add app to the whitelist for an uninterrupted experience</string>
    <string name="settings_notification_section_title">Manage notifications</string>
    <string name="settings_notification_section_subtitle">Manage your notification preferences &amp; channels.</string>
	<string name="settings_app_section_page_header">Supported apps</string>
	<string name="settings_data_section_page_header">Data &amp; privacy</string>
	<string name="settings_tts_section_page_header">Text to Speech</string>
    <string name="menu_action_settings">Settings</string>
	<string name="menu_action_fav">Favorites</string>
	<string name="menu_action_sort">Sort</string>
	<string name="menu_action_sort_alphabetically">A-Z</string>
	<string name="menu_action_sort_year">Year</string>
	<string name="import_screen_info">Flutter lets you import data from the exported files. Please go over the following options and select what you would like to import.</string>
	<string name="import_screen_recently_browsed_movies">Recently browsed</string>
	<string name="import_screen_favorites">Liked titles</string>
	<string name="import_screen_collections">Collections</string>
	<string name="import_screen_import_cta">Import</string>
	<string name="import_screen_error_info">Unable to import data from this file</string>
	<string name="import_screen_open_flutter_cta">Open Flutter</string>
	<string name="import_screen_go_back_cta">Go back</string>
</resources>