<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_fav"
        android:title="@string/menu_action_fav"
        android:icon="@drawable/ic_favorite_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="always">

	    <menu>
		    <item
			    android:id="@+id/action_sort_alphabetically"
			    android:title="@string/menu_action_sort_alphabetically"
			    app:showAsAction="never"/>

		    <item
			    android:id="@+id/action_sort_year"
			    android:title="@string/menu_action_sort_year"
			    app:showAsAction="never"/>

		    <!--<item
			    android:id="@+id/action_sort_genre"
			    android:title="@string/menu_action_sort_genre"
			    app:showAsAction="never"/>-->
	    </menu>


    </item>

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="always"/>

</menu>