<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:textAppearance="@style/Text.Dark.Secondary.Medium.Large"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/settings_privacy_info"
		android:paddingStart="@dimen/gutter"
		android:paddingEnd="@dimen/gutter"
		android:layout_marginTop="@dimen/gutter"/>

	<android.support.v7.widget.SwitchCompat
		android:id="@+id/save_browsing_toggle"
		android:paddingStart="@dimen/gutter"
		android:paddingEnd="@dimen/gutter"
		android:layout_marginTop="@dimen/gutter"
		android:textAppearance="@style/Text.Dark.Secondary"
		android:text="@string/settings_browse_history"
		android:visibility="gone"
		tools:visibility="visible"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<Button
		android:id="@+id/clear_history_button"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="160dp"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/settings_clear_history"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider_color"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/settings_export_import_data_info"
		android:textAppearance="@style/Text.Dark.Secondary"
		android:layout_marginTop="@dimen/gutter"
		android:paddingStart="@dimen/gutter"
		android:paddingEnd="@dimen/gutter"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/export_data_button"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="160dp"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:text="@string/settings_export_data"/>

		<android.support.v4.widget.Space
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"/>

		<Button
			android:id="@+id/import_data_button"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="160dp"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:text="@string/settings_import_data"/>

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider_color"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="@style/Text.Dark.Secondary"
		android:text="@string/settings_delete_data_info"
		android:paddingStart="@dimen/gutter"
		android:paddingEnd="@dimen/gutter"
		android:layout_marginTop="@dimen/gutter"/>

	<Button
		android:id="@+id/delete_data_button"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="160dp"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/settings_delete_data"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider_color"/>
</LinearLayout>