<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/toast_duration_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_toast_duration_info"
            android:padding="@dimen/gutter"
            android:textSize="@dimen/settings_header_text_size"/>

        <LinearLayout
            android:id="@+id/seekbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/gutter"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/toast_duration_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="9"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/toast_duration_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                tools:text="3"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_info"
            android:padding="@dimen/gutter"
            android:textSize="@dimen/settings_header_text_size"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/netflix_toggle"
            android:padding="@dimen/gutter"
            android:textSize="@dimen/settings_text_size"
            android:text="@string/settings_netflix"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/prime_video_toggle"
            android:padding="@dimen/gutter"
            android:textSize="@dimen/settings_text_size"
            android:text="@string/settings_primevideo"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#44444444"/>

	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/settings_privacy_info"
		    android:padding="@dimen/gutter"
		    android:textSize="@dimen/settings_header_text_size"/>

	    <android.support.v7.widget.SwitchCompat
		    android:id="@+id/save_browsing_toggle"
		    android:padding="@dimen/gutter"
		    android:textSize="@dimen/settings_text_size"
		    android:text="@string/settings_browse_history"
		    android:visibility="gone"
		    tools:visibility="visible"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>

	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="12dp"
		    android:gravity="center_vertical"
		    android:orientation="horizontal">

		    <Button
			    style="@style/Widget.AppCompat.Button.Colored"
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="wrap_content"
			    android:layout_marginEnd="8dp"
			    android:text="@string/settings_clear_history"/>

		    <Button
			    style="@style/Widget.AppCompat.Button.Colored"
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="wrap_content"
			    android:layout_marginStart="8dp"
			    android:text="@string/settings_delete_data"/>

	    </LinearLayout>

	    <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#44444444"/>

    </LinearLayout>

</FrameLayout>