<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textAppearance="@style/Text.Dark.Secondary.Medium.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_notification_title"
        android:paddingStart="@dimen/gutter"
        android:paddingEnd="@dimen/gutter"
        android:layout_marginTop="@dimen/gutter"/>

    <TextView
        android:textAppearance="@style/Text.Dark.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_support_notification_info"
        android:paddingStart="@dimen/gutter"
        android:paddingEnd="@dimen/gutter"
        android:layout_marginTop="@dimen/gutter"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/support_inapp_toggle"
        android:padding="@dimen/gutter"
        android:text="@string/settings_support_inapp_purchase"
        android:visibility="gone"
        tools:visibility="visible"
        android:textAppearance="@style/Text.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/support_review_toggle"
        android:padding="@dimen/gutter"
        android:text="@string/settings_support_rate_app"
        android:visibility="gone"
        tools:visibility="visible"
        android:textAppearance="@style/Text.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"/>

</LinearLayout>