<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:textAppearance="@style/Text.Dark.Secondary.Medium.Large"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/settings_info"
			android:padding="@dimen/gutter"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/toggles_container"
			android:orientation="vertical">

		</LinearLayout>

		<TextView
			android:id="@+id/not_installed_apps"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/gutter"
			android:textAppearance="@style/Text.Dark.Secondary"
			tools:text="@string/settings_not_installed_apps"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="8dp"
			android:background="@color/divider_color" />

		<TextView
			android:id="@+id/rating_duration_info"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="@style/Text.Dark.Secondary"
			android:text="@string/settings_toast_duration_info"
			android:padding="@dimen/gutter"/>

		<LinearLayout
			android:id="@+id/seekbar_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/gutter"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<android.support.v7.widget.AppCompatSeekBar
				android:id="@+id/rating_duration_seekbar"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:max="9"
				android:layout_weight="1"/>

			<TextView
				android:id="@+id/rating_duration_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingStart="16dp"
				android:paddingEnd="16dp"
				android:textAppearance="@style/Text.Dark.Medium.Large"
				android:textColor="@color/colorAccent"
				tools:text="3"/>

		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/divider_color"/>

	</LinearLayout>

</ScrollView>